<resources>
    <string name="app_name">Prueba</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="registro_de_pulsos">REGISTRO DE PULSOS</string>
    <string name="bienvenido_a_smart_pillbox">¡Bienvenido a Smart Pillbox!</string>
    <string name="inicia_sesi_n_para_continuar">Inicia sesión para continuar</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="inicio">INICIO</string>
    <string name="smart_pillbox">Smart PillBox</string>
    <string name="bienvenidoLabel">Bienvenido</string>
    <string name="continuarLabel">Regístrate para comenzar a usar Smart Pillbox</string>
    <string name="nameTextField">Nombre completo</string>
    <string name="usuarioSignUpTextField">Email</string>
    <string name="passTextField">Contraseña</string>
    <string name="passConfTextField">Confirma tu contraseña</string>
    <string name="numeroTextField">Número de celular</string>
    <string name="edadPacienteTextField">Edad del paciente</string>
    <string name="sexTextField">Sexo</string>
    <string name="inicioSesion">REGISTRAR</string>
    <string name="usuarioNuevo">Ya tienes una cuenta? Inicia sesión</string>
    <string name="men">MENÚ</string>
    <string name="edittext1">Tipo de medicamento</string>
    <string name="edittext2">Cantidad:</string>
    <string name="edittext3">Hora de toma:</string>
    <string name="edittext4">Duración del tratamiento:</string>
    <string name="configuraci_n">CONFIGURACIÓN</string>
    <string name="bocina_pillbox">Bocina PillBox</string>
    <string name="volumen">Volumen</string>
    <string name="pantalla_pillbox">Pantalla PillBox</string>
    <string name="brillo">Brillo</string>
    <string name="seleccionar_medicamento_a_eliminar">Seleccionar medicamento a eliminar</string>
    <string name="est_seguro_que_desea_eliminar_el_medicamento">¿Está seguro que desea eliminar el medicamento?</string>
    <string name="si">SI</string>
    <string name="no">NO</string>
    <string name="historial">HISTORIAL</string>
    <string name="editTextTextPersonName">Nombre</string>
    <string name="editTextTextPersonName2">Nombre paciente</string>
    <string name="editTextTextPersonName3">Número celular</string>
    <string name="editTextTextPersonName4">Edad</string>
    <string name="editTextTextPersonName5">Sexo</string>
    <string name="seleccionar_medicamento_a_modificar">Seleccionar medicamento a modificar</string>
    <string name="nombre_del_medicamento">Nombre del medicamento:</string>
    <string name="tipo_de_medicamento">Tipo de medicamento</string>
    <string name="cantidad">Cantidad:</string>
    <string name="hora">Hora de toma:</string>
    <string name="recargaLabel">RECARGA DE MEDICAMENTOS</string>
    <string name="textView3">Seleccionar compartimiento"</string>
    <string name="textView7">Seleccionar medicamento</string>
    <string name="textView8">Por favor, coloca 1 pastilla en el compartimiento seleccionado</string>
    <string name="editTextNumber">numero</string>
    <string name="button2">Continuar</string>}
    <string name="tratamiento">TRATAMIENTO</string>
    <string name="a_adir_medicamento">Añadir medicamento</string>
    <string name="modificar_medicamento">Modificar medicamento</string>
    <string name="eliminar_medicamento">Eliminar medicamento</string>
    <string name="principal">Principal</string>
    <string name="inicio2">Inicio</string>
    <string name="tratamiento2">Tratamiento</string>
    <string name="historial2">Historial</string>
    <string name="recarga_de_medicamentos">Recarga de medicamentos</string>
    <string name="registro_de_pulsos2">Registro de Pulsos</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="configuraci_n2">Configuración</string>
    <string name="salir">Salir</string>
    <string name="pol_ticas_de_privacidad">Políticas de privacidad</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="cancelar">Cancelar</string>
    <string name="registrar">Registrate</string>
    <string name="textView14">Nombre del medicamento</string>
    <string name="textView15">Tipo de medicamento</string>
    <string name="textView16">Cantidad</string>
    <string name="textView17">Duración del tratamiento</string>
    <string name="buttonFechaFin">Fin</string>
    <string name="textView2">MODIFICAR MEDICAMENTO</string>
    <string name="textViewSelecMed">Seleccionar medicamento:</string>
    <string name="textViewSelecMed3">Tipo de medicamento:</string>
    <string name="textViewSelecMed2">Nombre del medicamento:</string>
    <string name="textViewSelecMed4">Cantidad:</string>
    <string name="buttonHora">Hora</string>
    <string name="buttonFechaInicio4">Fin</string>
    <string name="buttonFechaInicio">Inicio</string>
    <string name="textEliminarMed">ELIMINAR TRATAMIENTO</string>
    <string name="textViewSelecMedElim">Seleccionar medicamento:</string>
    <string name="textViewConfirmElim">¿Está seguro que desea eliminar el medicamento seleccionado?</string>
    <string name="buttonSi">Si</string>
    <string name="buttonNo">No</string>
    <string name="historialLabel">CONTROL DE TRATAMIENTO</string>
    <string name="perfilName">Nombre de perfil</string>
    <string name="textPaciente">Nombre del paciente</string>
    <string name="textNcelular">Número de celular</string>
    <string name="textedad">Edad</string>
    <string name="textsexo">Sexo</string>
    <string name="textView18">Notificaciones</string>
    <string name="buttonSeleccH">Horario para notificaciones</string>
    <string name="switch1">Sonido</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="sonido">Sonido</string>
    <string name="horario_para_notificaciones">Horario para notificaciones</string>
    <string name="todo">TODO</string>
    <string name="nombre_de_perfil">Nombre de perfil</string>
    <string name="nombre_del_paciente">Nombre del Paciente</string>
    <string name="edad">Edad</string>
    <string name="numero_de_celular">Numero de celular</string>
    <string name="perfil">PERFIL</string>
    <string name="sexo">Sexo</string>
    <string name="control_de_tratamiento"> DE TRATAMIENTO</string>
    <string name="eliminar_tratamiento">ELIMINAR TRATAMIENTO</string>
    <string name="est_seguro_que_desea_eliminar_el_medicamento_seleccionado">¿Está seguro que desea eliminar el medicamento seleccionado?</string>
    <string name="modificar_tratamiento">MODIFICAR TRATAMIENTO</string>
    <string name="seleccionar_medicamento">Seleccionar medicamento:</string>
    <string name="duraci_n_del_tratamiento">Duración del tratamiento</string>
    <string name="fin">Fin</string>
    <string name="hora_de_toma">Hora de toma</string>
    <string name="control">Control de tratamiento</string>

</resources>